--- a/financial-registry/src/main/resources/application.yml
+++ b/financial-registry/src/main/resources/application.yml
@@ -5,6 +5,9 @@ spring:
     name: financial-registry
 eureka:
   client:
-    service-url: http://127.0.0.1:${server.port}/eureka
+    fetch-registry: false
+    register-with-eureka: false
+    service-url:
+      defaultZone:  http://127.0.0.1:${server.port}/eureka
   server:
     enable-self-preservation: false
