--- a/financial-goods/financial-goods-service/pom.xml
+++ b/financial-goods/financial-goods-service/pom.xml
@@ -45,16 +45,30 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
-        <!--自己的接口-->
-        <!--<dependency>-->
-            <!--<groupId>com.financial.service</groupId>-->
-            <!--<artifactId>financial-goods-interface</artifactId>-->
-            <!--<version>${financial.latest.version}</version>-->
-        <!--</dependency>-->
+        <!--自己的实体-->
+        <dependency>
+            <groupId>com.financial.service</groupId>
+            <artifactId>financial-goods-interface</artifactId>
+            <version>${financial.latest.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+      <resources>
+        <resource>
+          <directory>src/main/java</directory>
+          <includes>
+            <include>**/*.xml</include>
+          </includes>
+        </resource>
+        <resource>
+          <directory>src/main/resources</directory>
+        </resource>
+      </resources>
+    </build>
 
 </project>
