--- a/financial-menu/src/main/resources/application.yml
+++ b/financial-menu/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 18081
+  port: 18082
 spring:
   application:
-    name: goods-serice
+    name: menu-service
   datasource:
     url: jdbc:mysql://192.168.111.135:3306/financial
     username: root
@@ -18,6 +18,6 @@ eureka:
       ip-address: 127.0.0.1
       instance-id: ${spring.application.name}:${server.port}
 mybatis:
-  mapper-locations: classpath*:com/financial/goods/dao/mapper/*Mapper.xml
+  mapper-locations: classpath*:com/financial/menu/dao/mapper/*Mapper.xml
 
 
