--- a/financial-goods/financial-goods-service/src/main/resources/application.yml
+++ b/financial-goods/financial-goods-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: goods-serice
   datasource:
-    url: jdbc:mysql://192.168.111.135:3306/financial
+    url: jdbc:mysql://127.0.0.1:3306/financial?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Hongkong
     username: root
     password: 123456
 eureka:
@@ -19,5 +19,7 @@ eureka:
       instance-id: ${spring.application.name}:${server.port}
 mybatis:
   mapper-locations: classpath*:com/financial/goods/dao/mapper/*Mapper.xml
+
+
 
 
