financial brand，以及包路径的修改和common包打包

--- a/financial-goods/pom.xml
+++ b/financial-goods/pom.xml
@@ -18,5 +18,13 @@
     </modules>
     <packaging>pom</packaging>
 
+  <dependencies>
+    <dependency>
+      <groupId>com.financial.common</groupId>
+      <artifactId>financial-common</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
+
 
 </project>
