--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>financial-goods</module>
         <module>financial-common</module>
       <module>financial-menu</module>
+      <module>financial-upload</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -36,7 +37,6 @@
         <mysql.version>8.0.13</mysql.version>
         <pageHelper.starter.version>1.2.5</pageHelper.starter.version>
         <financial.latest.version>1.0.0-SNAPSHOT</financial.latest.version>
-        <fastDFS.client.version>1.26.1-RELEASE</fastDFS.client.version>
         <java.version>1.8</java.version>
     </properties>
 
