--- a/financial-api-gateway/src/main/resources/application.yml
+++ b/financial-api-gateway/src/main/resources/application.yml
@@ -18,7 +18,7 @@ zuul:
   routes:
     goods-serice: /goods/**
     menu-service: /menus/**
-  ignored-services: -upload-service
+  ignored-services: upload-service
 
 ribbon:
   ConnectTimeout: 250 # 连接超时时间(ms)
