--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,8 @@
         <pageHelper.starter.version>1.2.5</pageHelper.starter.version>
         <financial.latest.version>1.0.0-SNAPSHOT</financial.latest.version>
         <java.version>1.8</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
 
     <dependencyManagement>
